# cat-or-hotdog

./: .gitignore  README.md  consolidate_data.py  main.py  pyproject.toml  train.py
data/eval.zarr/images/: zarr.json
data/eval.zarr/images/c/0/0/0/: 0
data/eval.zarr/images/c/1/0/0/: 0
data/eval.zarr/images/c/10/0/0/: 0
data/eval.zarr/images/c/100/0/0/: 0
data/eval.zarr/images/c/101/0/0/: 0
data/eval.zarr/images/c/102/0/0/: 0
data/eval.zarr/images/c/103/0/0/: 0
data/eval.zarr/images/c/104/0/0/: 0
data/eval.zarr/images/c/105/0/0/: 0
data/eval.zarr/images/c/106/0/0/: 0
data/eval.zarr/images/c/107/0/0/: 0
data/eval.zarr/images/c/108/0/0/: 0
data/eval.zarr/images/c/109/0/0/: 0
data/eval.zarr/images/c/11/0/0/: 0
data/eval.zarr/images/c/110/0/0/: 0
data/eval.zarr/images/c/111/0/0/: 0
data/eval.zarr/images/c/112/0/0/: 0
data/eval.zarr/images/c/113/0/0/: 0
data/eval.zarr/images/c/114/0/0/: 0
data/eval.zarr/images/c/115/0/0/: 0
data/eval.zarr/images/c/116/0/0/: 0
data/eval.zarr/images/c/117/0/0/: 0
data/eval.zarr/images/c/118/0/0/: 0
data/eval.zarr/images/c/119/0/0/: 0
data/eval.zarr/images/c/12/0/0/: 0
data/eval.zarr/images/c/120/0/0/: 0
data/eval.zarr/images/c/121/0/0/: 0
data/eval.zarr/images/c/122/0/0/: 0
data/eval.zarr/images/c/123/0/0/: 0
data/eval.zarr/images/c/124/0/0/: 0
data/eval.zarr/labels/: zarr.json
data/test.zarr/images/: zarr.json
data/test.zarr/labels/: zarr.json
data/train.zarr/images/: zarr.json
data/train.zarr/labels/: zarr.json
src/: consolidate_data.py  dataset.py  train.py
(+1225 files in other folders)
